<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@color/foreground_gray"
        android:foregroundTintMode="src_atop"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_backdrop_image"
        android:contentDescription="@string/welcome_background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/extra_large_size"
        app:fontFamily="@font/baloo_bhai_2_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_sub_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="@dimen/small_size"
        app:fontFamily="@font/baloo_bhai_2_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_sign_in"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_next"
        android:drawableTint="@color/white"
        android:text="@string/proceed_to_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/button_small_size"
        app:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text"
        app:layout_constraintStart_toStartOf="@+id/welcome_sub_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_sub_text"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/baloo_bhai_2_medium"
        android:text="@string/terms"
        android:textColor="@color/white"
        android:textSize="@dimen/small_small_size"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_sign_in"
        app:layout_constraintStart_toStartOf="@+id/welcome_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/welcome_sign_in"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

