<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@color/foreground_gray"
        android:foregroundTintMode="src_atop"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_backdrop_image"
        android:contentDescription="@string/welcome_background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="650dp"
        android:background="@drawable/login_background"
        android:backgroundTint="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/extra_large_size"
        app:fontFamily="@font/baloo_bhai_2_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_sub_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_message"
        android:textColor="@color/white"
        android:textSize="@dimen/small_size"
        app:fontFamily="@font/baloo_bhai_2_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_other_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_other_message"
        android:textColor="@color/white"
        android:textSize="@dimen/small_small_size"
        app:fontFamily="@font/baloo_bhai_2_medium"
        app:layout_constraintEnd_toEndOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="@+id/login_sub_text"
        app:layout_constraintTop_toBottomOf="@+id/login_sub_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/google_logo"
        android:text="@string/login_with_google"
        android:textColor="@color/black"
        android:fontFamily="@font/baloo_bhai_2_medium"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_other_text"
        app:layout_constraintStart_toStartOf="@+id/login_other_text"
        app:layout_constraintTop_toBottomOf="@+id/login_other_text" />

</androidx.constraintlayout.widget.ConstraintLayout>